# graphql-conf-2023

./: LICENSE
frontend/: Cargo.toml  generate.sh  schema.json
frontend/graphql/: query.graphql
frontend/src/: main.rs
graphql/: Cargo.toml
graphql/src/: main.rs
